FlightsRepository refactored New Swagger documentation Removed group implementation from controller
